--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -25,6 +25,7 @@
     "@ngxs/store": "^3.7.0",
     "angular-notifier": "^6.0.1",
     "bootstrap": "^4.5.2",
+    "express": "^4.17.1",
     "hammerjs": "^2.0.8",
     "ng-sidebar": "^9.4.2",
     "ng5-slider": "^1.2.4",
